--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
   </developers>
 
   <properties>
-    <changelist>999999-SNAPSHOT</changelist>
+    <changelist>3802-adp1</changelist>
     <!-- in minikube
     minikube ip | sed -e 's/\([0-9]*\.[0-9]*\.[0-9]*\).*/\1.1/' -->
     <connectorHost />
