[JENKINS-67256] Integrate with Cloud Statistics plugin
Implement TrackedItem on KubernetesComputer and KubernetesSlave.
StandardPlannedNodeBuilder now returns a TrackedPlannedNode.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.csanchez.jenkins.plugins</groupId>
   <artifactId>kubernetes</artifactId>
-  <version>3950-adp1</version>
+  <version>3950-adp2</version>
   <name>Kubernetes plugin</name>
   <description>Jenkins plugin to run dynamic agents in a Kubernetes cluster</description>
   <packaging>hpi</packaging>
@@ -39,7 +39,7 @@
   </developers>
 
   <properties>
-    <changelist>3950-adp1</changelist>
+    <changelist>3950-adp2</changelist>
     <!-- in minikube
     minikube ip | sed -e 's/\([0-9]*\.[0-9]*\.[0-9]*\).*/\1.1/' -->
     <connectorHost />
@@ -136,6 +136,11 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-durable-task-step</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>cloud-stats</artifactId>
+      <version>302.v45b_647b_90608</version>
     </dependency>
 
     <!-- for testing -->
